--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,148 +1,57 @@
-html, body {
-  max-height: 100%;
-}
-
 body {
-    background-image: url("");
-    background-position: center top;
-    background-repeat: no-repeat;
-    background-size: 100%;
-    background-color: #000000;
-    background-attachment: fixed;
-    font-family: 'Crimson Text', serif;
-    font-size: 18px;
+    background-color: #111111;
+    color: #000000;
+    font-family: Courier, monospace;
+    font-size: 16px;
+    }
+a {
+    color: #555555;
+    font-size: 16px;
+}
+a:hover {
+    color: #666666;
+}
+h1 {
     color: #ffffff;
-}
-
-.header {
-    display: block;
-    max-width: 70%;
-    padding: 10px;
-    padding-top: 40px;
-    padding-bottom: 40px;
+    font-size: 50px;
     text-align: center;
-    background-color: #000000;
-    color: #000000;
-    border: 0px solid black;
-    margin: auto;
-}
-
-.header h1 {
-    font-size: 0px;
-    display: none!important;
-    visibility: hidden!important;
-}
-
-.header h2 {
-    font-family: Orienta, serif;
-    font-style: italic;
-    font-size: 22px;
-}
-
-.navbar {
-    display: block;
-    max-width: 70%;
-	color: #000000;
-    background-color: #000000;
-    padding: 10px;
-    padding-bottom: 40px;
-    border: 1px solid black;
-    margin: auto;
-    top: 0;
-}
-
-.navbar a {
-    font-family: Oswald, monospace;
-    float: left;
-    display: inline-block;
-    color: #000000;
-    text-align: center;
-    padding: 4px 10px;
     text-decoration: none;
-    text-transform: uppercase;
+    letter-spacing: 8px;
 }
-
-.navbar a.right {
-    float: right;
-}
-
-.navbar a:hover {
-    background-color: #ddd;
-    color: #000000;
-    text-transform: uppercase;
-}
-
-.navbar a.active {
-    background-color: #2c2c2c;
+h2 {
     color: #ffffff;
+    font-size: 25px;
+    text-align: center;
+    text-decoration: underline;
+    letter-spacing: 2px;
 }
-
-.main {   
-    font-family: 'Crimson Text', serif;
-    display: block;
-    max-width: 70%;
-	height: 100%;
-    background-color: #000000;
-    padding: 10px;
-    padding-top: 40px;
-    padding-bottom: 60px;
-    border: 0px solid black;
+tr {
+    color: #ffffff;
+    font-size: 16px;
+    list-style-type: none;
     margin: auto;
-    text-align: center;
-    line-height: 2px;
-}
-
-.main h3 {
-    font-size: 28px;
-    text-align: center;
-}
-
-.footer {
+    padding: 20px;
+    padding-left: 40px;
+    max-width: 100%;
+    background: #000000;
+    }
+th a {
     display: block;
-    max-width: 70%;
-	color: #000000;
+    color: #ffffff;
+    background-color: #444444;
+    font-size: 16px;
+    text-decoration: none;
+    width: 200px;
+    height: 28px;
     padding: 10px;
-    padding-top: 10px;
-    padding-bottom: 10px;
-    text-align: center;
-    background-color: #000000;
-    border: 0px solid black;
-    word-spacing: 10px;
-    margin: auto;
-}
-
-
-.row {
-    display: flex;
-    flex-wrap: wrap;
-    padding: 0 4px;
-}
-
-
-.column {
-    flex: 48%;
-    max-width: 48%;
-    padding: 0 6px;
-}
-
-.column img {
-    margin-top: 8px;
-    vertical-align: middle;
-    width: 100%;
-}
-
-/* Responsive layout - makes a two column-layout instead of four columns */
-@media screen and (max-width: 800px) {
-    .column {
-        flex: 100%;
-        max-width: 100%;
+    font-weight: normal;
     }
-}
-
-/* Responsive layout - makes the two columns stack on top of each other instead of next to each other */
-@media screen and (max-width: 600px) {
-    .column {
-        flex: 100%;
-        max-width: 100%;
+th a:hover {
+    background-color: #666666;
+    color: #ffffff;
     }
+    @media screen and (max-width: 600px) {
+  tr {
+    max-width: 100%;
+  }
 }
