--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,7 +1,7 @@
 body {
     background-color: #111111;
     color: #000000;
-    font-family: Courier, monospace;
+    font-family: Syne, Courier, monospace;
     font-size: 16px;
     }
 a {
