--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,13 +1,16 @@
 body {
-    background-color: #111111;
+    background-color: #000000;
+	background-image: url("https://gbrrrl.com/assets/blog/disease/static_bg.gif");
+	background-repeat: repeat;
+	background-attachment: fixed;
     color: #000000;
-    font-family: Syne, Courier, monospace;
+    font-family: Verdana, Courier, monospace;
     font-size: 16px;
     }
 a {
     color: #555555;
     font-size: 16px;
-    font-family: Syne, Courier, monospace;
+    font-family: Verdana, Courier, monospace;
 }
 a:hover {
     color: #666666;
@@ -15,7 +18,7 @@ a:hover {
 h1 {
     color: #ffffff;
     font-size: 50px;
-    font-family: Syne, Courier, monospace;
+    font-family: Verdana, Courier, monospace;
     text-align: center;
     text-decoration: none;
     letter-spacing: 8px;
@@ -23,7 +26,7 @@ h1 {
 h2 {
     color: #ffffff;
     font-size: 25px;
-    font-family: Syne, Courier, monospace;
+    font-family: Verdana, Courier, monospace;
     text-align: center;
     text-decoration: underline;
     letter-spacing: 2px;
